--- a/container-socket/docker-compose.yml
+++ b/container-socket/docker-compose.yml
@@ -22,6 +22,8 @@ services:
   crowdsec:
     image: crowdsecurity/crowdsec
     restart: always
+    networks:
+      crowdsec:
     ports:
       - "127.0.0.1:8080:8080"
     environment:
@@ -39,6 +41,8 @@ services:
 
 # #Uncomment to use socket proxy
   # socket-proxy:
+  #   networks:
+  #     crowdsec:
   #   restart: always
   #   image: tecnativa/docker-socket-proxy
   #   container_name: socket-proxy
