fix socket example

--- a/container-socket/docker-compose.yml
+++ b/container-socket/docker-compose.yml
@@ -49,6 +49,22 @@ services:
   #   environment:
   #     INFO: 1
   #     CONTAINERS: 1
+  #     BUILD: 0
+  #     COMMIT: 0
+  #     CONFIGS: 0
+  #     DISTRIBUTION: 0
+  #     EXEC: 0
+  #     GRPC: 0
+  #     IMAGES: 0
+  #     NETWORKS: 0
+  #     NODES: 0
+  #     PLUGINS: 0
+  #     SERVICES: 0
+  #     SESSION: 0
+  #     SWARM: 0
+  #     SYSTEM: 0
+  #     TASKS: 0
+  #     VOLUMES: 0
   #   volumes:
   #     - '/var/run/docker.sock:/var/run/docker.sock'
 # #
