--- a/swag/docker-compose.yml
+++ b/swag/docker-compose.yml
@@ -35,6 +35,7 @@ services:
     image: docker.io/crowdsecurity/crowdsec:latest
     container_name: crowdsec
     environment:
+      - GID=1000
       - BOUNCER_KEY_SWAG=${CROWDSEC_API_KEY}
       - COLLECTIONS=crowdsecurity/nginx crowdsecurity/http-cve crowdsecurity/whitelist-good-actors
     volumes:
