--- a/container-socket/docker-compose.yml
+++ b/container-socket/docker-compose.yml
@@ -44,7 +44,7 @@ services:
   #   networks:
   #     crowdsec:
   #   restart: always
-  #   image: tecnativa/docker-socket-proxy
+  #   image: lscr.io/linuxserver/socket-proxy:latest
   #   container_name: socket-proxy
   #   environment:
   #     INFO: 1
@@ -66,7 +66,7 @@ services:
   #     TASKS: 0
   #     VOLUMES: 0
   #   volumes:
-  #     - '/var/run/docker.sock:/var/run/docker.sock'
+  #     - '/var/run/docker.sock:/var/run/docker.sock:ro'
 # #
 
 volumes:
