--- a/container-labels/docker-compose.yml
+++ b/container-labels/docker-compose.yml
@@ -29,6 +29,8 @@ services:
     environment:
       DOCKER_HOST: tcp://socket-proxy:2375
       COLLECTIONS: "crowdsecurity/nginx"
+    ports:
+      - "127.0.0.1:8080:8080"
     depends_on:
       - 'reverse-proxy'
       - 'socket-proxy'
