--- a/NPMplus/compose.yaml
+++ b/NPMplus/compose.yaml
@@ -69,6 +69,7 @@ services:
     volumes:
       - "/opt/crowdsec/conf:/etc/crowdsec"
       - "/opt/crowdsec/data:/var/lib/crowdsec/data"
+      - "./crowdsec/npmplus.yaml:/etc/crowdsec/acquis.d/npmplus.yaml:ro"
       - "/opt/npm/nginx:/opt/npm/nginx:ro"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
